third_party/move/tools/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `build -v`:
BUILDING build_include_exclude_stdlib
warning[W02016]: unknown attribute
  ┌─ ./sources/UseSigner.move:1:3
  │
1 │ #[evm_contract] // for passing evm test flavor
  │   ^^^^^^^^^^^^ Attribute name 'evm_contract' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "lint::skip", "native_interface", "test", "test_only", "verify_only"}'.

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:3:7
  │
3 │   use std::signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: '(std=0x1)::signer'

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:6:5
  │
6 │     signer::address_of(account)
  │     ^^^^^^ Unbound module or type alias 'signer'

Command `-d -v build`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
warning[W02016]: unknown attribute
  ┌─ ./sources/UseSigner.move:1:3
  │
1 │ #[evm_contract] // for passing evm test flavor
  │   ^^^^^^^^^^^^ Attribute name 'evm_contract' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "lint::skip", "native_interface", "test", "test_only", "verify_only"}'.

